Fix mobile menu spacings and remove text decoration from read more button

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -370,6 +370,14 @@ a {
   font-size: 1rem;
 }
 
+.link-more .more-link {
+  text-decoration: none;
+}
+
+.link-more .more-link:hover {
+	text-decoration: underline;
+}
+
 a:hover,
 a:focus,
 a:active {
@@ -983,15 +991,11 @@ input[type="search"]:focus::-webkit-search-cancel-button {
 }
 
 .site-menu li li {
-  text-indent: 15px;
+  padding-right: 20px;
 }
 
 .site-menu .menu > li > a:hover {
   transition: 0.4s all;
-}
-
-.site-menu li li li {
-  text-indent: 30px;
 }
 
 .site-menu {
