--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ Theme URI: https://nasiothemes.com/themes/muzeum
 Author: Atanas Yonkov
 Author URI: https://nasiothemes.com
 Description: Lightweight WordPress theme without any libraries or frameworks. Designed for museums, libraries, web journals, archives, blogs, historical websites, anthologies, documentation, scientific research and others. This theme is made with the divine purpose to showcase high quality content. It is fully customizable and highly extendable. It features a vintage old paper background, option to change images, logo and theme accent colors. The theme features beautiful typography and the highly optimized Ionicons font icons that only load the icons that you use. Muzeum is a highly performant theme. It is very fast, SEO-optimized and cross-browser compatible. It features clean, mobile-first html5/css3 templates, vanilla JavaScript and core WordPress functions. It can also be used as a starter theme and is easy to adapt to any design. If you are looking for a high quality WordPress theme, you have found it.
-Version: 1.1.6
+Version: 1.1.8
 Requires at least: 4.7
-Tested up to: 5.6
+Tested up to: 6.1
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -383,6 +383,14 @@ a {
 
 .link-more {
   font-size: 1rem;
+}
+
+.link-more .more-link {
+  text-decoration: none;
+}
+
+.link-more .more-link:hover {
+	text-decoration: underline;
 }
 
 .entry-title {
@@ -892,11 +900,7 @@ textarea {
 }
 
 .site-menu li li {
-  text-indent: 15px;
-}
-
-.site-menu li li li {
-  text-indent: 30px;
+  padding-left: 20px;
 }
 
 .site-menu {
@@ -1019,11 +1023,6 @@ textarea {
 
   .site-menu li li {
     padding: 0;
-  }
-
-  .site-menu li li,
-  .site-menu li li li {
-    text-indent: 0px;
   }
 
   .site-menu li li:focus {
